-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 21, 22, repo-lilliput-17
-
Component/s: hotspot
-
b18
-
aarch64
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8318560 | 21.0.2 | Aleksey Shipilev | P2 | Closed | Fixed | b05 |
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (0xe0000000), pid=64585, tid=64619
# stop: Header is not fast-locked
#
# JRE version: OpenJDK Runtime Environment (22.0) (fastdebug build 22-internal-git-a2391a92c)
# Java VM: OpenJDK 64-Bit Server VM (fastdebug 22-internal-git-a2391a92c, mixed mode, tiered, compressed oops, compressed class ptrs, g1 gc, linux-aarch64)
# Problematic frame:
# J 1373 c2 sun.nio.ch.NativeThreadSet.add()I java.base (155 bytes) @ 0x0000ffff7ccdf110 [0x0000ffff7ccdef80+0x0000000000000190]
#
- backported by
-
JDK-8318560 AArch64: "stop: Header is not fast-locked" with -XX:-UseLSE since JDK-8315880
-
- Closed
-
- duplicates
-
JDK-8316751 IllegalMonitorStateException: current thread is not owner
-
- Closed
-
- relates to
-
JDK-8316921 Perf regressions up to 14% in b16 many benchmarks all platforms
-
- Closed
-
-
JDK-8291555 Implement alternative fast-locking scheme
-
- Resolved
-
-
JDK-8315880 Change LockingMode default from LM_LEGACY to LM_LIGHTWEIGHT
-
- Closed
-
- links to
-
Commit
openjdk/jdk21u/fd329f2a
-
Commit
openjdk/jdk/b6a97c07
-
Commit
openjdk/lilliput-jdk17u/2db08b6f
-
Review
openjdk/jdk21u/258
-
Review
openjdk/jdk/15978
-
Review
openjdk/lilliput-jdk17u/73